Added tenant settings API
